--- a/Public/css/signup.css
+++ b/Public/css/signup.css
@@ -55,7 +55,7 @@ textarea{
 }
 
 ::placeholder{
-  color: #284448;
+  color: #002A2AFF;
 }
 
 .submit-btn{
@@ -111,7 +111,7 @@ label{
     /*text-transform: capitalize;*/
     display: inline-block;
     margin-bottom: 10px;
-    font-size: 13px;
+    font-size: 14px;
     color: #284448;
 }
 
@@ -119,7 +119,7 @@ label a{
     color: #284448;
 }
 
-.link{
+.link, span{
     color: #284448;
     text-align: center;
     display: block;
@@ -145,6 +145,7 @@ label a{
     opacity: 1;
     pointer-events: all;
     top: 50%;
+    background: #fff;
 }
 
 .alert-img{
@@ -156,8 +157,17 @@ label a{
 .alert-msg{
     color: #e24c4b;
     font-size: 20px;
-    text-transform: capitalize;
+    /*text-transform: capitalize;*/
     text-align: center;
     line-height: 30px;
     font-weight: 500;
+}
+
+.loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    display: none;
 }
