--- a/Public/css/footer.css
+++ b/Public/css/footer.css
@@ -36,22 +36,24 @@ footer{
 
 .footer-title, .info{
     color: rgba(255, 255, 255, 0.75);
-    margin: 5px 0 0 30px;
+    margin: 5px 0 0 50px;
+
 }
 
 .footer-title{
     margin-top: 10px;
     color: #fff;
     text-transform: uppercase;
+    letter-spacing: 3px;
 }
 
 .footer-subtitle{
     color: #fff;
-    margin: 10px 0 0 30px;
+    margin: 0 0 0 50px;
 }
 
 .footer-social-container{
-    margin-top: 10px;
+    margin: 20px 30px 0 50px;
     display: flex;
     justify-content: space-between;
 }
@@ -97,7 +99,7 @@ footer{
     color: #fff;
     font-size: 20px;
     margin-bottom: 5px;
-    margin-left: 10px;
+    /*margin-left: 10px;*/
 }
 
 .category .footer-link{
