--- a/Public/css/terms.css
+++ b/Public/css/terms.css
@@ -1,39 +1,47 @@
-*{
-    font-family: 'Krub', sans-serif;
-    word-spacing: 2px;
-}
-
 body{
     display: block;
     background: #fff;
+    margin: 0;
+    padding: 0;
 }
 
-.form{
-    width: 100%;
-    padding: 20px 10vw;
+section {
+    padding: 0 10vw;
+}
+
+.section-heading {
+    padding: 10px 10vw;
+    text-transform: capitalize;
 }
 
 .heading{
     text-transform: capitalize;
     font-weight: 500;
+}
+
+h1 {
     font-size: 30px;
-    margin-bottom: 20px;
+    color: #016565;
 }
 
-.form input{
-    background: #f5f5f5 !important;
-    width: 100% !important;
+.heading h2 {
+    font-size: 24px;
+    margin-bottom: 5px;
 }
 
-.three-input-container{
-    display: flex;
-    justify-content: space-between;
+.terms-info{
+    color: #383838;
+    line-height: 25px;
+    white-space: pre-wrap;
+    margin: 20px 0 20px 50px;
 }
 
-.three-input-container input{
-    margin: 0 !important;
+a {
+    color: #016565;
+    text-decoration: underline;
+    transition: color 0.5s;
 }
 
-#state{
-    margin: 0 20px !important;
+a:hover {
+    color: #982525;
 }
