--- a/Public/css/nav.css
+++ b/Public/css/nav.css
@@ -28,6 +28,7 @@
 .nav-items{
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 .search{
@@ -41,16 +42,16 @@
     padding: 10px;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-    border: 1px solid #d1d1d1;
+    border: 1px solid #8dcccc; /* #d1d1d1; */
     text-transform: capitalize;
     background: none;
-    color: #a9a9a9;
+    color: #8dcccc; /* #a9a9a9; */
     outline: none;
     transition: color 0.5s;
 }
 
 .search-box:focus {
-    color: #016565; /* Change the text color when focused */
+    color: #016565;
 }
 
 .search-btn{
@@ -60,7 +61,7 @@
     border: none;
     outline: none;
     cursor: pointer;
-    background: #016565;  /* #383838; */
+    background: #016565;
     color: #fff;
     text-transform: capitalize;
     font-size: 15px;
@@ -69,7 +70,7 @@
 }
 
 .search-box::placeholder{
-    color: #a9a9a9;
+    color: #8dcccc; /* #a9a9a9; */
 }
 
 .nav-items a{
@@ -78,6 +79,7 @@
 
 .nav-items a img{
     width: 30px;
+    cursor: pointer;
 }
 
 .links-container{
@@ -94,7 +96,7 @@
     padding: 0 10px;
     margin: 0 5px;
     text-decoration: none;
-    color: #016565;  /* #383838; */
+    color: #016565;
     opacity: 0.5;
     transition: .5s;
     position: relative;
@@ -106,7 +108,7 @@
     left: 0;
     right: 0;
     bottom: -3px;
-    border-bottom: 2px solid #b55b6d; /* Lighter underline color */
+    border-bottom: 2px solid #b55b6d;
     transition: all 0.5s;
     transform: scaleX(0);
     transform-origin: 0 50%;
@@ -114,8 +116,8 @@
 
 .link:hover {
     opacity: 1;
-    text-decoration: none; /* Remove underline for the text */
-    color: #982525; /* Text color after hovering */
+    text-decoration: none;
+    color: #982525;
 }
 
 .link:hover::after {
@@ -124,3 +126,50 @@
     opacity: 1;
 }
 
+.login-logout-popup {
+    position: absolute;
+    left: 89%;
+    transform: translateX(-50%);
+    padding: 10px;
+    background: #fff;
+    border-radius: 10px;
+    top: 54px;
+    width: 200px;
+    transition: .5s;
+    border: 2px solid #f5f5f5;
+    opacity: 1;
+}
+
+.login-logout-popup::after {
+    content: '';
+    position: absolute;
+    top: -7.5px;
+    left: 50%;
+    transform: translateX(-50%) rotate(45deg);
+    width: 15px;
+    height: 15px;
+    background: #fff;
+    border-radius: 5px;
+}
+
+.account-info {
+    font-size: 16px;
+}
+
+#user-btn {
+    padding: 10px;
+    background: #016565;
+    color: #fff;
+    border: none;
+    outline: none;
+    width: 100%;
+    border-radius: 5px;
+    margin-top: 20px;
+    text-transform: capitalize;
+    cursor: pointer;
+}
+
+.hide {
+    opacity: 0;
+    pointer-events: none;
+}
