--- a/Public/css/seller.css
+++ b/Public/css/seller.css
@@ -1,7 +1,7 @@
 body{
     width: 100%;
     display: block;
-    min-height: auto;
+    min-height: 90vh;
     padding: 0 5vw;
     position: relative;
     font-family: roboto, sans-serif;
@@ -87,4 +87,56 @@ body{
 .no-product-image{
     display: block;
     margin: auto;
+}
+
+.hide{
+    display: none;
+}
+
+.product-container{
+    padding: 0;
+}
+
+.tag{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 2px 10px;
+    border-radius: 2px;
+    background: #fff;
+    color: #016565;
+}
+
+.product-card:hover, .card-action-btn{
+    opacity: 1;
+    pointer-events: all;
+}
+
+.card-action-btn {
+    position: absolute;
+    top: 10px;
+    right: 40px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+    transition: 0.5s;
+    background: #fff;
+    overflow: hidden;
+    cursor: pointer;
+    opacity: 0;
+}
+
+.card-action-btn img {
+    height: 18px;
+
+}
+.open-btn {
+    top: 60px;
+}
+
+.delete-popup-btn {
+    top: 110px;
+    background: #fa3d3d;
 }
