--- a/Public/css/signup.css
+++ b/Public/css/signup.css
@@ -12,7 +12,6 @@ body{
     justify-content: center;
     align-items: center;
     background: #f5f5f5;
-    /*font-family: 'roboto', sans-serif;*/
     font-family: 'Krub', sans-serif;
 }
 
@@ -131,7 +130,7 @@ label a{
     min-height: 150px;
     border-radius: 10px;
     box-shadow: 0 5px 100px rgba(0, 0, 0, 0.05);
-    position: absolute;
+    position: fixed;
     top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -139,6 +138,7 @@ label a{
     opacity: 0;
     pointer-events: none;
     transition: 1s;
+    z-index: 2;
 }
 
 .alert-box.show{
