--- a/Public/css/seller.css
+++ b/Public/css/seller.css
@@ -19,12 +19,14 @@ body{
     border-radius: 10px;
     background: #fff;
     padding: 30px;
+    margin-right: 20px;
 }
 
 .heading{
     text-transform: capitalize;
     font-weight: 700;
     font-size: 18px;
+    color: #016565;
 }
 
 .des{
@@ -36,11 +38,10 @@ body{
 .btn{
     border: none;
     outline: none;
-    background: #383838;
+    background: #016565;
     color: #fff;
     padding: 10px 30px;
     border-radius: 5px;
-    text-transform: capitalize;
     font-size: 14px;
     cursor: pointer;
 }
@@ -139,4 +140,63 @@ body{
 .delete-popup-btn {
     top: 110px;
     background: #fa3d3d;
+}
+
+.delete-alert{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0,0.2);
+    z-index: 2;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.alert{
+    width: 400px;
+    height: auto;
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+    position: relative;
+    padding: 15px;
+}
+
+.close-brn{
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.close-btn img{
+    width: 15px;
+}
+
+.delete-svg{
+    height: 60px;
+    display: block;
+    margin: 20px auto;
+}
+
+.delete-text{
+    color: #016565;
+    text-align: center;
+}
+
+.delete-btn{
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    background: #e24c4b;
+    margin: 15px auto 0;
+    display: block;
+    padding: 10px 20px;
+    text-transform: capitalize;
+    color: #fff;
 }
