--- a/Public/css/seller.css
+++ b/Public/css/seller.css
@@ -4,7 +4,7 @@ body{
     min-height: 90vh;
     padding: 0 5vw;
     position: relative;
-    font-family: roboto, sans-serif;
+    font-family: 'Krub', sans-serif;
 }
 
 .logo{
