--- a/Public/css/product.css
+++ b/Public/css/product.css
@@ -21,7 +21,7 @@
     top: 75%;
     left: 50%;
     transform: translateX(-50%);
-    width: 90%; /* 90% */
+    width: 90%;
     background: #fff;
     border-radius: 5px;
     display: grid;
@@ -91,7 +91,7 @@
     height: 60px;
     text-align: center;
     font-size: 18px;
-    border: 1px solid #383838;
+    border: 1px solid #016565;
     border-radius: 50%;
     margin: 10px 10px 10px 0;
     line-height: 60px;
@@ -116,7 +116,14 @@
     padding: 20px;
     border-radius: 5px;
     background: none;
+    border: 1px solid #016565;
+    color: #016565;
+    font-size: 20px;
     cursor: pointer;
+}
+
+#cart-btn{
+    margin-right: 2%;
 }
 
 .btn:hover {
