--- a/Public/css/product.css
+++ b/Public/css/product.css
@@ -21,7 +21,7 @@
     top: 75%;
     left: 50%;
     transform: translateX(-50%);
-    width: 90%;
+    width: 90%; /* 90% */
     background: #fff;
     border-radius: 5px;
     display: grid;
@@ -117,14 +117,7 @@
     border-radius: 5px;
     border: 1px solid #016565;
     background: none;
-    border: 1px solid #016565;
-    color: #016565;
-    font-size: 20px;
     cursor: pointer;
-}
-
-#cart-btn{
-    margin-right: 2%;
 }
 
 .btn:hover {
