Feractor: Slider products cards

--- a/Public/css/seller.css
+++ b/Public/css/seller.css
@@ -70,7 +70,7 @@ body{
 
 /* product listing */
 .add-product{
-    width: 100%;
+    width: 100% ;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -82,10 +82,11 @@ body{
 
 .add-product-title{
     text-transform: capitalize;
-    color: #383838;
+    color: #016565;
 }
 
 .no-product-image{
+    width: 100%;
     display: block;
     margin: auto;
 }
@@ -131,15 +132,17 @@ body{
 
 .card-action-btn img {
     height: 18px;
-
+    z-index: 100;
 }
 .open-btn {
     top: 60px;
+    z-index: 100;
 }
 
 .delete-popup-btn {
     top: 110px;
     background: #fa3d3d;
+    z-index: 100;
 }
 
 .delete-alert{
@@ -165,17 +168,19 @@ body{
     padding: 15px;
 }
 
-.close-brn{
+.close-btn{
     position: absolute;
     top: 15px;
     right: 15px;
     background: none;
     border: none;
     cursor: pointer;
+    z-index: 100;
 }
 
 .close-btn img{
     width: 15px;
+    z-index: 100;
 }
 
 .delete-svg{
@@ -199,4 +204,5 @@ body{
     padding: 10px 20px;
     text-transform: capitalize;
     color: #fff;
+    z-index: 100;
 }
