Ver5: fix Slider on Product cart

--- a/Public/css/seller.css
+++ b/Public/css/seller.css
@@ -109,7 +109,7 @@ body{
     color: #016565;
 }
 
-.product-card:hover, .card-action-btn{
+.product-card:hover, .card-action-btn:hover{
     opacity: 1;
     pointer-events: all;
 }
@@ -117,7 +117,7 @@ body{
 .card-action-btn {
     position: absolute;
     top: 10px;
-    right: 40px;
+    right: 10px;
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -132,17 +132,15 @@ body{
 
 .card-action-btn img {
     height: 18px;
-    z-index: 100;
 }
+
 .open-btn {
     top: 60px;
-    z-index: 100;
 }
 
 .delete-popup-btn {
     top: 110px;
     background: #fa3d3d;
-    z-index: 100;
 }
 
 .delete-alert{
@@ -151,7 +149,7 @@ body{
     position: fixed;
     top: 0;
     left: 0;
-    background: rgba(0, 0, 0,0.2);
+    background: rgba(0, 0, 0,0.5);
     z-index: 2;
     display: none;
     justify-content: center;
@@ -175,12 +173,10 @@ body{
     background: none;
     border: none;
     cursor: pointer;
-    z-index: 100;
 }
 
 .close-btn img{
     width: 15px;
-    z-index: 100;
 }
 
 .delete-svg{
@@ -204,5 +200,4 @@ body{
     padding: 10px 20px;
     text-transform: capitalize;
     color: #fff;
-    z-index: 100;
 }
