--- a/Public/css/product.css
+++ b/Public/css/product.css
@@ -17,8 +17,8 @@
 .product-images{
     position: absolute;
     /*bottom: 5%;*/
-    /*bottom: 20px;*/
-    top: 75%;
+    bottom: 20px;
+    /*top: 75%;*/
     left: 50%;
     transform: translateX(-50%);
     width: 90%;
@@ -54,8 +54,8 @@
 }
 
 .details .product-short-des{
-    font-size: 25px;
-    line-height: 30px;
+    font-size: 18px;
+    line-height: 24px;
     height: auto;
     margin: 15px 0 30px;
 }
@@ -94,6 +94,8 @@
     border: 1px solid #016565;
     border-radius: 50%;
     margin: 10px 10px 10px 0;
+    /*margin: 10px;*/
+    /*margin-left: 0;*/
     line-height: 60px;
     text-transform: uppercase;
     color: #016565;
@@ -113,9 +115,9 @@
     max-width: 240px;
     width: 48%;
     margin: 5px 5px 5px 0;
+    /*margin: 20px 0;*/
     padding: 20px;
     border-radius: 5px;
-    border: 1px solid #016565;
     background: none;
     border: 1px solid #016565;
     color: #016565;
@@ -134,12 +136,12 @@
 
 .detail-des{
     padding: 0 10vw;
-    text-transform: capitalize;
 }
 
 .heading{
     font-size: 30px;
     margin-bottom: 30px;
+    text-transform: capitalize;
 }
 
 .des{
@@ -155,80 +157,6 @@
     }
 }
 
-@media (max-width: 1400px)  { /* screen and (min-width: 600px), (min-width: 1100px) */
-    .product-images{
-        /*margin-right: 3px;*/
-        top: 72%;
-    }
-    .image-slider{
-        height: 30rem;
-        background-size: contain;
-        background-repeat: no-repeat;
-        display: flex;
-    }
-}
-@media (max-width: 1300px) {
-    .product-images{
-        top: 68%;
-    }
-    .image-slider {
-        background-size: contain;
-        height: 30rem;
-    }
-}
-@media (max-width: 1200px) {
-    .product-images{
-        top: 67%;
-    }
-}
-@media screen and (max-width: 1130px) {
-    .product-images{
-        top: 65%;
-    }
-
-
-}
-@media screen and (max-width: 1100px) {
-    .product-images {
-        top: 66%;
-    }
-}
-@media screen and (max-width: 1000px) {
-    .product-images {
-        top: 65%;
-    }
-}
-@media (max-width: 990px) {
-    .product-images{
-        top: 64%;
-    }
-}
-@media (max-width: 980px) {
-    .product-images{
-        top: 63%;
-    }
-}
-
-@media (max-width: 970px) {
-    .product-images{
-        top: 62%;
-    }
-}
-@media (max-width: 940px) {
-    .product-images{
-        top: 61%;
-    }
-}
-@media (max-width: 920px) {
-    .product-images{
-        top: 60%;
-    }
-}
-@media (max-width: 900px) {
-    .product-images{
-        top: 58%;
-    }
-}
 @media (max-width: 850px) {
     .product-details {
         flex-direction: column; /* Stack elements vertically */
@@ -237,14 +165,11 @@
     }
 
     .image-slider {
-        width: 500px;
+        width: 100%;
+        /*width: 500px;*/
         height: 30rem;
         background-size: cover;
         background-repeat: no-repeat;
-    }
-
-    .product-images {
-        top: 72%;
     }
 
     .details {
