--- a/Public/css/home.css
+++ b/Public/css/home.css
@@ -4,7 +4,7 @@
 .hero-section{
     width: 100%;
     height: calc(100vh - 120px);
-    background-image: url('../img/header.png');
+    background-image: url('../img/header.jpg');
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -38,7 +38,8 @@
     padding: 0 10vw;
     font-size: 30px;
     font-weight: 500;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
+    color: #016565;
     text-transform: capitalize;
 }
 
@@ -88,12 +89,10 @@
 
 .card-btn{
     position: absolute;
-    bottom: 10px;
+    padding: 5px;
+    width: 80%;
     left: 50%;
     transform: translateX(-50%);
-    padding: 10px;
-    width: 90%;
-    text-transform: capitalize;
     border: none;
     outline: none;
     background: #fff;
@@ -101,14 +100,23 @@
     transition: 0.5s;
     cursor: pointer;
     opacity: 0;
+    margin: 5px;
+}
+
+.wishlist-btn {
+    bottom: 10px;
+}
+
+.cart-btn {
+    bottom: 50px;
 }
 
 .product-card:hover .card-btn{
     opacity: 1;
 }
 
-.card-btn:hover{
-    background: #efefef;
+.cart-btn:hover, .wishlist-btn:hover{
+    background: #a1e8e8;
 }
 
 .product-info{
