--- a/Public/css/404.css
+++ b/Public/css/404.css
@@ -27,6 +27,6 @@
 }
 
 .background-image {
-    background-image: url('../img/404_background.png');
+    background-image: url('../img/404_background.jpg');
     background-size: cover;
 }
