--- a/Public/css/cart.css
+++ b/Public/css/cart.css
@@ -54,6 +54,7 @@
     width: 100px;
     object-fit: cover;
     border-radius: 5px;
+    margin-right: 10px;
 }
 
 .sm-text{
@@ -66,12 +67,12 @@
     text-transform: capitalize;
 }
 
-.sm-des{
+.sm-des, .size{
     font-size: 18px;
     opacity: 0.5;
     line-height: 25px;
     text-transform: capitalize;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
 .item-counter{
