--- a/Public/css/home.css
+++ b/Public/css/home.css
@@ -67,6 +67,10 @@
     width: 100%;
     height: 350px;
     overflow: hidden;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
 }
 
 .product-thumb{
