--- a/Public/css/product.css
+++ b/Public/css/product.css
@@ -11,7 +11,6 @@
     height: 500px;
     position: relative;
     background-size: cover;
-    justify-content: center;
 }
 
 .product-images{
@@ -19,22 +18,24 @@
     bottom: 10px;
     left: 50%;
     transform: translateX(-50%);
-    width: 90%;
+    width: 80%;
     background: #fff;
     border-radius: 5px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     height: 100px;
-    grid-gap: 10px;
-    padding: 10px;
+    grid-gap: 7px;
+    padding: 7px;
+    align-items: flex-start;
 }
 
 .product-images img{
     max-width: 100%;
     width: 100%;
-    height: 80px;
+    height: 88px;
     object-fit: cover;
     cursor: pointer;
+    border-radius: 5px;
 }
 
 .product-images img.active{
@@ -161,7 +162,6 @@
     .product-details {
         flex-direction: column; /* Stack elements vertically */
         padding: 20px 10vw;
-
     }
 
     .image-slider {
@@ -184,7 +184,7 @@
     }
 
     .image-slider{
-        max-width: 500px;
+        /*max-width: 400px;*/
         width: 100%;
         height: 30rem;
         justify-content: center;
