--- a/Public/css/signup.css
+++ b/Public/css/signup.css
@@ -42,10 +42,9 @@ textarea{
     padding: 20px;
     border-radius: 5px;
     background: #fff;
-    border: 1px solid #8dcccc; /* none; */
+    border: 1px solid #8dcccc;
     outline: none;
     margin: 20px 0;
-    /*text-transform: capitalize;*/
     color: #002c2c;
     font-size: 14px;
     box-shadow: 0 4px 1010px rgba(0, 0, 0, 0.01);
@@ -157,7 +156,6 @@ label a{
 .alert-msg{
     color: #e24c4b;
     font-size: 20px;
-    /*text-transform: capitalize;*/
     text-align: center;
     line-height: 30px;
     font-weight: 500;
