--- a/Public/css/footer.css
+++ b/Public/css/footer.css
@@ -16,7 +16,7 @@ footer{
 
 .footer-about {
     display: grid;
-    grid-template-columns: 1fr auto; /*273px fit-content(100%); */
+    grid-template-columns: 1fr auto;
     width: 100%;
     justify-content: space-between;
 }
