--- a/Public/css/cart.css
+++ b/Public/css/cart.css
@@ -112,7 +112,9 @@
 }
 
 .sm-price{
-    font-size: 50px;
+    flex: 0 0 180px;
+    text-align: right;
+    font-size: 3em;
     font-weight: 500;
     color: #016565;
     margin-right: 0.3rem;
@@ -177,6 +179,7 @@
 
 .bill{
     font-size: 3.75em;
+    text-align: right;
     font-weight: 500;
     margin: 10px 0;
     color: #016565;
