--- a/Public/css/product.css
+++ b/Public/css/product.css
@@ -84,6 +84,10 @@
     font-weight: 300;
 }
 
+.price {
+    display: inline-block;
+}
+
 .size-radio-btn{
     display: inline-block;
     width: 60px;
